# sat-water

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inference.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-test.yml  publish.yml
satwater/: __init__.py  builders.py  inference.py  models.py  preprocess.py  utils.py  weights.py
scripts/: predict.py  train.py  weights.py
segment-water/: main.py  models.py  preprocess.py
segmentation/segment-water/: README.md  inference.py  main.py  models.py  preprocess.py
tests/: __init__.py  conftest.py  test_base.py  test_inference.py  test_models.py  test_preprocess.py
